<resources>
    <string name="app_name">BankHapoalimApp</string>

    <string name="welcome_title"> Welcome To App!</string>
    <string name="welcome_action_title">what would you like to do?</string>
    <string name="welcome_latest_movies">Latest Movies</string>
    <string name="welcome_login_additional_text">(login to your account in order to watch your\n favorite movies list!)</string>
    <string name="welcome_favorites">Favorite Movies</string>

    <string name="movies_title">Here are the latest movies:</string>

    <string name="login_title">Please enter your Tmdb username and password:</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>

    <string name="favorites_title">Here are your favorites:</string>

    <string name="error_string">An error occurred.\nPlease open the app again</string>

</resources>
