<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:layoutDirection="ltr"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAlignment="center"
        style="@style/TitelsStyle"
        />

        <EditText
            android:id="@+id/login_user_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/login_username"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="22dp"
            />

        <EditText
            android:id="@+id/login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/login_password"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="22dp"
            />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="22dp"
        android:layout_gravity="center"
        />

</LinearLayout>